--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,8 @@
     "firebase": "^9.6.7",
     "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.2"
+    "mongoose": "^6.2.2",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
